--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <div class="content">
     <h1>Welcome to a Special Surprise 🎉</h1>
-    <button class="btn-start" onclick="location.href='index.html'">Next</button>
+    <button class="btn-start" onclick="location.href='Hbd.html'">Next</button>
   </div>
 
 </body>
